# Breast-Cancer-Prediction-Data-App

./: README.md  docker-compose.yml
.devcontainer/: devcontainer.json
dev/notebooks/: Class_3&4_DL&NN.ipynb
src/api/: Dockerfile  config.py
src/client/: Dockerfile  app.py  config.py  pyproject.toml
